k8s/chats/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-chat-microservice
spec:
  rules:
    - http:
        paths:
          - path: /chats/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: chats
                port:
                  number: 3004
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
